--- a/market.html
+++ b/market.html
@@ -77,7 +77,7 @@
 
         details.method { margin:8px 0; overflow:hidden; }
         details.method summary { cursor:pointer; font-weight:700; font-size:12px; padding:8px 10px; background:linear-gradient(135deg,#ffe0ec,#ffd0df); border-bottom:1px dashed #bbb; }
-        pre.code { margin:0; padding:10px; background:#101318; color:#e8edf3; overflow:auto; max-width:100%; white-space:pre; font-size:11px; line-height:1.45; }
+        pre.code { margin:0; padding:10px; background:#101318 !important; color:#e8edf3 !important; overflow:auto; max-width:100%; white-space:pre; font-size:11px; line-height:1.45; border-radius: 0 0 8px 8px; }
         .kw{color:#ff7ab6;font-weight:700;} .fn{color:#7dcfff;} .var{color:#c3e88d;} .num{color:#f7c873;} .addr{color:#82aaff;}
 
         .how-it-works-grid { display:grid; gap:12px; }
@@ -200,7 +200,7 @@
         <main id="main-content">
 
         <!-- Hero / About Section -->
-        <div id="about" class="section panel overflow-hidden">
+        <div id="about" class="section panel overflow-hidden" style="padding-top: 120px;">
             <div class="section-outer panel py-6 sm:py-8 lg:py-9 xl:py-10 bg-secondary-100">
                 <div class="container sm:max-w-lg xl:max-w-2xl">
                     <div class="section-inner panel">
