--- a/market.html
+++ b/market.html
@@ -87,18 +87,39 @@
 
         /* Production additions */
         .network-warning { background:#fff3cd; color:#856404; border:2px solid #856404; padding:10px 16px; text-align:center; font-weight:700; font-size:13px; position:fixed; top:0; left:0; right:0; z-index:10001; }
-        .tx-status { font-size:12px; padding:6px 10px; border-radius:8px; margin-top:6px; }
+        .tx-status { font-size:12px; padding:6px 10px; border-radius:8px; margin-top:6px; word-break:break-word; }
         .tx-status.pending { background:#fff3cd; color:#856404; }
         .tx-status.success { background:#d4edda; color:#155724; }
         .tx-status.error { background:#f8d7da; color:#721c24; }
-        .balances { display:flex; gap:12px; margin-bottom:8px; font-size:12px; }
+        .balances { display:flex; gap:8px; margin-bottom:8px; font-size:12px; flex-wrap:wrap; }
         .balances .bal { background:#f0f4f8; padding:4px 8px; border-radius:6px; font-weight:600; }
-        .fill-inline { display:flex; gap:4px; align-items:center; margin-top:4px; }
+        .fill-inline { display:flex; gap:4px; align-items:center; margin-top:4px; flex-wrap:wrap; }
         .fill-inline input { width:70px; padding:3px 6px; font-size:11px; border:1px solid #999; border-radius:6px; }
-        .fill-inline button { padding:3px 8px; font-size:10px; border-radius:6px; cursor:pointer; font-weight:700; border:1px solid; }
+        .fill-inline button { padding:3px 8px; font-size:10px; border-radius:6px; cursor:pointer; font-weight:700; border:1px solid; white-space:nowrap; }
         .fill-confirm { background:#d4edda; color:#155724; border-color:#155724; }
         .fill-all { background:#cce5ff; color:#004085; border-color:#004085; }
         .order-stale { opacity:0.5; }
+
+        /* Mobile fixes */
+        #create-order { font-size:14px; padding:10px 12px; white-space:normal; word-break:break-word; line-height:1.3; min-height:44px; }
+        @media (max-width:576px) {
+            #create-order { font-size:13px; padding:10px 8px; }
+            .market-grid { gap:16px; }
+            .stats-grid { grid-template-columns:repeat(2,1fr); }
+            .market-row { font-size:12px; gap:4px; flex-wrap:wrap; }
+            .take-btn, .cancel-btn { font-size:10px; padding:3px 8px; }
+            .depth-row { font-size:11px; }
+            .my-order-row { font-size:11px; flex-wrap:wrap; }
+            .how-it-works-grid { grid-template-columns:repeat(2,1fr); }
+            details.method summary { font-size:11px; padding:6px 8px; }
+            pre.code { font-size:10px; padding:8px; }
+            .fill-inline input { width:60px; }
+        }
+        @media (max-width:380px) {
+            .stats-grid { grid-template-columns:1fr 1fr; gap:6px; }
+            .stat-card .v { font-size:11px; }
+            .how-it-works-grid { grid-template-columns:1fr; }
+        }
     </style>
     <script type="application/ld+json">
     {
@@ -263,7 +284,7 @@
                             <input id="amount" placeholder="0" aria-label="amount" class="form-control border border-2 border-black rounded-2 mb-2 fs-6" style="padding:10px;" />
                             <label class="fs-7 text-muted">Price (w🍖 per 🦄)</label>
                             <input id="price" placeholder="0" aria-label="price" class="form-control border border-2 border-black rounded-2 mb-2 fs-6" style="padding:10px;" />
-                            <button id="create-order" class="btn btn-md btn-secondary border border-2 border-black contrast-shadow-sm w-100 fw-bold" disabled>Connect Wallet to Trade</button>
+                            <button id="create-order" class="btn btn-md btn-secondary border border-2 border-black contrast-shadow-sm w-100 fw-bold">Connect Wallet</button>
                             <div class="market-row mt-2"><span class="fs-7 text-muted">Preview</span><strong id="preview" class="fs-7">—</strong></div>
                             <div id="tx-status"></div>
                         </div>
@@ -856,7 +877,8 @@
 
     // ─── Place Order ───────────────────────────────────────────────────
     createBtn.addEventListener('click', async () => {
-        if (!marketWrite || !userAddress) return;
+        if (!userAddress) { connectWallet(); return; }
+        if (!marketWrite) return;
         if (txPending) return;
 
         const side = sideEl.value;
